[gd_scene load_steps=10 format=3 uid="uid://bhononsjqtd5s"]

[ext_resource type="Script" uid="uid://dw218r8dmlrqq" path="res://main_menu.gd" id="1_h7a2f"]
[ext_resource type="Script" uid="uid://b88mhr0rt7ssv" path="res://cuoreUI.gd" id="1_i26rj"]
[ext_resource type="FontFile" uid="uid://cg2bp20jowkno" path="res://images/Poppins-Bold.ttf" id="2_eiy7p"]

[sub_resource type="Gradient" id="Gradient_eiy7p"]
offsets = PackedFloat32Array(0, 0.311688, 0.681818, 1)
colors = PackedColorArray(0.960784, 0.521569, 0.160784, 1, 0.866667, 0.164706, 0.482353, 1, 0.505882, 0.203922, 0.686275, 1, 0.317647, 0.356863, 0.831373, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h7a2f"]
gradient = SubResource("Gradient_eiy7p")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7a2f"]
bg_color = Color(0.309804, 0.619608, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eiy7p"]
bg_color = Color(0.309804, 0.321569, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qoqlk"]
bg_color = Color(0.82156, 0.899218, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwfq2"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h7a2f")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_h7a2f")
stretch_mode = 6

[node name="Decorazioni" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cuore" type="TextureRect" parent="Decorazioni"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i26rj")

[node name="Hashtag" type="TextureRect" parent="Decorazioni"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Campanello" type="TextureRect" parent="Decorazioni"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Commento" type="TextureRect" parent="Decorazioni"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -171.5
offset_right = 245.0
offset_bottom = 171.5
grow_horizontal = 2
grow_vertical = 2

[node name="MenuVbox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Label" type="Label" parent="Center/MenuVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.533333)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 96
text = "NetAware"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="Center/MenuVbox"]
custom_minimum_size = Vector2(380, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_h7a2f")
theme_override_styles/normal = SubResource("StyleBoxFlat_eiy7p")
text = "Gioca"

[node name="SmallButtons" type="VBoxContainer" parent="Center/MenuVbox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Tutorial" type="Button" parent="Center/MenuVbox/SmallButtons"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.309804, 0.321569, 1, 1)
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_qoqlk")
theme_override_styles/normal = SubResource("StyleBoxFlat_iwfq2")
text = "Tutorial"

[node name="Obiettivi" type="Button" parent="Center/MenuVbox/SmallButtons"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.309804, 0.321569, 1, 1)
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_qoqlk")
theme_override_styles/normal = SubResource("StyleBoxFlat_iwfq2")
text = "Obiettivi
"

[node name="Impostazioni" type="Button" parent="Center/MenuVbox/SmallButtons"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.309804, 0.321569, 1, 1)
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_qoqlk")
theme_override_styles/normal = SubResource("StyleBoxFlat_iwfq2")
text = "Impostazioni
"

[node name="Esci" type="Button" parent="Center/MenuVbox/SmallButtons"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.309804, 0.321569, 1, 1)
theme_override_fonts/font = ExtResource("2_eiy7p")
theme_override_font_sizes/font_size = 15
theme_override_styles/hover = SubResource("StyleBoxFlat_qoqlk")
theme_override_styles/normal = SubResource("StyleBoxFlat_iwfq2")
text = "Esci"

[node name="UI_Audio" type="AudioStreamPlayer" parent="."]

[node name="ConfermaUscita" type="ConfirmationDialog" parent="."]
title = "Confermi uscita?"
initial_position = 1
ok_button_text = "Si"
cancel_button_text = "No"
